feat(theme): implement dark mode toggle functionality
- Sync TestComponent with ThemeService state
- Add dark mode class binding to app root
- Fix PrimeNG dark mode selector
- Improve component organization and template structure

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-test></app-test>
-<router-outlet />
+<div [class.dark]="(themeService.darkMode$ | async)" class="min-h-screen">
+  <app-test></app-test>
+  <router-outlet />
+</div>
