--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,12 @@
-<div [class.dark]="(themeService.darkMode$ | async)" class="min-h-screen">
-  <app-test></app-test>
-  <router-outlet />
+<div [class.dark]="(themeService.darkMode$ | async)" class="min-h-screen flex flex-col">
+  <app-header></app-header>
+  
+  <main class="flex-grow bg-theme-bg dark:bg-theme-bg-dark">
+    <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 py-8">
+      <app-test></app-test>
+      <router-outlet />
+    </div>
+  </main>
+
+  <app-footer></app-footer>
 </div>
