style: set dark gray background for dark mode
- Change dark mode background to bg-gray-900
- Maintain primary-100 background for light mode

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div [class.dark]="(themeService.darkMode$ | async)" class="min-h-screen flex flex-col bg-primary-100 dark:bg-theme-bg-dark">
+<div [class.dark]="(themeService.darkMode$ | async)" class="min-h-screen flex flex-col bg-primary-100 dark:bg-gray-900">
   <app-header></app-header>
   
   <main class="flex-grow">
