--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div [class.dark]="(themeService.darkMode$ | async)" class="min-h-screen flex flex-col bg-primary-100 dark:bg-gray-900">
+<div [class.dark]="(themeService.darkMode$ | async)" class="min-h-screen flex flex-col bg-primary-100 dark:bg-black">
   <app-header></app-header>
   
   <main class="flex-grow">
