--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,32 +1,58 @@
 /* You can add global styles to this file, and also import other style files */
+
 @layer tailwind-base, primeng, tailwind-utilities;
 
 @layer tailwind-base {
-@tailwind base;
+  @tailwind base;
 }
 
 @layer tailwind-utilities {
-@tailwind components;
-@tailwind utilities;
+  @tailwind components;
+  @tailwind utilities;
 }
 
 html {
-    font-size: 14px;
-    /* Keyword values */
-font-smooth: auto;
-font-smooth: never;
-font-smooth: always;
+  font-size: 14px;
+  /* Keyword values */
+  font-smooth: auto;
+  font-smooth: never;
+  font-smooth: always;
 
-/* <length> value */
-font-smooth: 2em;
+  /* <length> value */
+  font-smooth: 2em;
 
-/* Global values */
-font-smooth: inherit;
-font-smooth: initial;
-font-smooth: revert;
-font-smooth: revert-layer;
-font-smooth: unset;
--webkit-font-smoothing: antialiased;
+  /* Global values */
+  font-smooth: inherit;
+  font-smooth: initial;
+  font-smooth: revert;
+  font-smooth: revert-layer;
+  font-smooth: unset;
+  -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
+.mesh {
+  @apply bg-primary-500;
+  background-image: radial-gradient(
+      at 40% 20%,
+      rgb(204 245 233) 0px,
+      transparent 50%
+    ),
+    radial-gradient(at 80% 0%, rgb(153 234 211) 0px, transparent 50%),
+    radial-gradient(at 0% 50%, rgb(230 250 244) 0px, transparent 50%),
+    radial-gradient(at 80% 50%, rgb(51 213 167) 0px, transparent 50%),
+    radial-gradient(at 0% 100%, rgb(199 210 254) 0px, transparent 50%),
+    radial-gradient(at 80% 100%, rgb(0 159 112) 0px, transparent 50%),
+    radial-gradient(at 0% 0%, rgb(165 180 252) 0px, transparent 50%);
+}
+
+.mesh2 {
+  background-color: aquamarine;
+}
+
+.noise-filter {
+  filter: url(#noise);
+  pointer-events: none;
+  background-color: rgba(255, 255, 255, 0.1);
+  mix-blend-mode: overlay;
+}
