--- a/src/app/components/not-found/not-found.component.html
+++ b/src/app/components/not-found/not-found.component.html
@@ -18,7 +18,7 @@
       </p>
       <div class="mt-10">
         <a
-          routerLink="/"
+          routerLink="/home"
           class="text-sm/7 font-semibold text-primary hover:text-primary-600"
         >
           <span aria-hidden="true">&larr;</span> {{ backToHomeText }}
