--- a/src/app/pages/search/search.component.html
+++ b/src/app/pages/search/search.component.html
@@ -1,3 +1,8 @@
+<app-page-header
+  title="Search Songs"
+  description="Search and manage your song collection">
+</app-page-header>
+
 <div class="card">
     <p-table 
       #dt 
@@ -332,4 +337,3 @@
   
     <p-toast></p-toast>
   </div>
-  
